--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.4"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.32-alpha"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
