--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,6 +121,7 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-core:2.21.0"
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.29.1-alpha'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.32-alpha'
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
 
 
 }
