--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,7 @@ dependencies {
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.29.1-alpha'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.32-alpha'
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 
 
 }
